--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,11 @@ body {
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(231, 69, 69, 0.1);
-  }
+    width: 80%;
+    font-size: 1.2em; 
+    }
+    
+  
   
   .form-container label {
     display: block;
@@ -64,6 +68,7 @@ body {
     color: rgba(5, 5, 138, 0.993);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+    background-color: aliceblue;
   }
   
   .table-container table {
@@ -74,8 +79,9 @@ body {
   .table-container th,
   .table-container td {
     padding: 8px;
-    border-bottom: 1px solid #220202;
+    border-bottom: 1px solid #310303;
     text-align
+  
   }
   
   .food-image {
